manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-nginx-service
  namespace: sample-app
spec:
  type: ClusterIP
  selector:
    app: sample-nginx
  ports:
    - port: 80
      targetPort: 80
